fix: z-index of page

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,5 @@
 #landing {
-  z-index: -2;
+  z-index: 1;
   background-color: #f0f0f0;
 }
 
